first pass at circles

--- a/index.html
+++ b/index.html
@@ -12,6 +12,15 @@
 			<header>
 				<h1>Gathering Garden</h1>
 			</header>
+			<div>
+				<ul class="content">
+					<li class="content__sphere"></li>
+					<li class="content__sphere"></li>
+					<li class="content__sphere"></li>
+					<li class="content__sphere"></li>
+					<li class="content__sphere"></li>
+				</ul>
+			</div>
 		</main>
 		<script src="index.js"></script>
 	</body>
