wip first pass at connecting circles

--- a/index.html
+++ b/index.html
@@ -14,11 +14,25 @@
 			</header>
 			<div>
 				<ul class="content">
-					<li class="content__sphere"></li>
-					<li class="content__sphere"></li>
-					<li class="content__sphere"></li>
-					<li class="content__sphere"></li>
-					<li class="content__sphere"></li>
+					<li id="sphere-1" class="content__wrapper" >
+						<div class="content__sphere"></div>
+					</li>
+					<div class="line" id="line-1"></div>
+					<li id="sphere-2" class="content__wrapper" >
+						<div  class="content__sphere"></div>
+					</li>
+					<div class="line" id="line-2"></div>
+					<li id="sphere-3" class="content__wrapper" >
+						<div id="sphere-3" class="content__sphere"></div>
+					</li>
+					<div class="line" id="line-3"></div>
+					<li id="sphere-4" class="content__wrapper" >
+						<div id="sphere-4" class="content__sphere"></div>
+					</li>
+					<div class="line" id="line-4"></div>
+					<li id="sphere-5" class="content__wrapper" >
+						<div id="sphere-5" class="content__sphere"></div>
+					</li>
 				</ul>
 			</div>
 		</main>
