--- a/index.html
+++ b/index.html
@@ -12,28 +12,33 @@
 			<header>
 				<h1>Gathering Garden</h1>
 			</header>
-			<div>
-				<ul class="content">
-					<li id="sphere-1" class="content__wrapper" >
-						<div class="content__sphere"></div>
-					</li>
-					<div class="line" id="line-1"></div>
-					<li id="sphere-2" class="content__wrapper" >
-						<div  class="content__sphere"></div>
-					</li>
-					<div class="line" id="line-2"></div>
-					<li id="sphere-3" class="content__wrapper" >
-						<div id="sphere-3" class="content__sphere"></div>
-					</li>
-					<div class="line" id="line-3"></div>
-					<li id="sphere-4" class="content__wrapper" >
-						<div id="sphere-4" class="content__sphere"></div>
-					</li>
-					<div class="line" id="line-4"></div>
-					<li id="sphere-5" class="content__wrapper" >
-						<div id="sphere-5" class="content__sphere"></div>
-					</li>
-				</ul>
+			<div id="page-wrapper">
+				<div>
+					<ul class="content">
+						<li id="sphere-1" class="content__wrapper" >
+							<div class="content__sphere"></div>
+						</li>
+						<div class="line" id="line-1"></div>
+						<li id="sphere-2" class="content__wrapper" >
+							<div  class="content__sphere"></div>
+						</li>
+						<div class="line" id="line-2"></div>
+						<li id="sphere-3" class="content__wrapper" >
+							<div id="sphere-3" class="content__sphere"></div>
+						</li>
+						<div class="line" id="line-3"></div>
+						<li id="sphere-4" class="content__wrapper" >
+							<div id="sphere-4" class="content__sphere"></div>
+						</li>
+						<div class="line" id="line-4"></div>
+						<li id="sphere-5" class="content__wrapper" >
+							<div id="sphere-5" class="content__sphere"></div>
+						</li>
+					</ul>
+				</div>
+				<div id="window">
+					<iframe id="frame" title="poem" src="poem.html"></iframe>
+				</div>
 			</div>
 		</main>
 		<script src="index.js"></script>
