--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
 						<li id="sphere-5" class="content__wrapper" >
 							<div id="sphere-5" class="content__sphere"></div>
 						</li>
+						<div class="line" id="line-5"></div>
 					</ul>
 				</div>
 				<div id="window__wrapper">
@@ -64,6 +65,6 @@
 				</script>
 			</div>
 		</main>
-		<script src="index.js"></script>
+		<script src="lines.js"></script>
 	</body>
 </html>
