nodes animate on hover

--- a/index.html
+++ b/index.html
@@ -13,34 +13,59 @@
 				<h1>Gathering Garden</h1>
 			</header>
 			<div id="page-wrapper">
-				<div>
-					<ul class="content">
-						<li id="sphere-1" class="content__wrapper" >
-							<div class="content__sphere">
-								<a class="content__link" href="?text=poem.html"></a>
-							</div>
+				<nav>
+					<ul class="nodes">
+						<li class="node__wrapper">
+							<a class="sphere__link" href="?text=poem.html">
+								<div class="sphere__wrapper">
+									<div class="sphere__gradient"></div>
+								</div>
+							</a>
 						</li>
-						<div class="line" id="line-1"></div>
-						<li id="sphere-2" class="content__wrapper" >
-							<div class="content__sphere">
-								<a class="content__link" href="?text=wildflowers.html"></a>
-							</div>
+						<li class="node__wrapper">
+							<a class="sphere__link" href="?text=wildflowers.html">
+								<div id="sphere-2" class="sphere__wrapper">
+									<div class="sphere__gradient"></div>
+								</div>
+							</a>
 						</li>
-						<div class="line" id="line-2"></div>
-						<li id="sphere-3" class="content__wrapper" >
-							<div id="sphere-3" class="content__sphere"></div>
+						<li class="node__wrapper">
+							<a class="sphere__link" href="?text=wildflowers.html">
+								<div id="sphere-3" class="sphere__wrapper" >
+									<div id="sphere-3" class="sphere__gradient"></div>
+								</div>
+							</a>
 						</li>
-						<div class="line" id="line-3"></div>
-						<li id="sphere-4" class="content__wrapper" >
-							<div id="sphere-4" class="content__sphere"></div>
+						<li class="node__wrapper">
+							<a class="sphere__link" href="?text=wildflowers.html">
+								<div id="sphere-4" class="sphere__wrapper" >
+									<div id="sphere-4" class="sphere__gradient"></div>
+								</div>
+							</a>
 						</li>
-						<div class="line" id="line-4"></div>
-						<li id="sphere-5" class="content__wrapper" >
-							<div id="sphere-5" class="content__sphere"></div>
+						<li class="node__wrapper">
+							<a class="sphere__link" href="?text=wildflowers.html">
+								<div id="sphere-5" class="sphere__wrapper" >
+									<div id="sphere-5" class="sphere__gradient"></div>
+								</div>
+							</a>
 						</li>
-						<div class="line" id="line-5"></div>
+						<li class="node__wrapper">
+							<a class="sphere__link" href="?text=wildflowers.html">
+								<div id="sphere-6" class="sphere__wrapper" >
+									<div id="sphere-6" class="sphere__gradient"></div>
+								</div>
+							</a>
+						</li>
+						<li class="node__wrapper">
+							<a class="sphere__link" href="?text=wildflowers.html">
+								<div id="sphere-7" class="sphere__wrapper" >
+									<div id="sphere-7" class="sphere__gradient"></div>
+								</div>
+							</a>
+						</li>
 					</ul>
-				</div>
+				</nav>
 				<div id="window__wrapper">
 					<div id="window__text">
 						<iframe id="frame__text" title="poem" src="./contributions/poem.html"></iframe>
@@ -65,6 +90,5 @@
 				</script>
 			</div>
 		</main>
-		<script src="lines.js"></script>
 	</body>
 </html>
