refactor css to separate file

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 		<meta http-equiv="X-UA-Compatible" text="ie=edge">
 		<title>Gathering Garden</title>
 		<link rel="stylesheet" href="./style.css">
+		<link rel="stylesheet" href="./nav.css">
 	</head>
 	<body>
 		<main>
