add flower bed page

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<link rel="stylesheet" href="./nav.css">
 	</head>
 	<body>
-		<main>
+		<header>
 			<nav>
 				<ul class="nodes">
 					<li class="node__wrapper">
@@ -41,7 +41,7 @@
 						</a>
 					</li>
 					<li class="node__wrapper">
-						<a class="sphere__link" href="?text=wildflowers.html">
+						<a class="sphere__link" href="./flower-bed.html">
 							<div id="sphere-5" class="sphere__wrapper" >
 								<div id="sphere-5" class="sphere__gradient"></div>
 							</div>
@@ -63,9 +63,9 @@
 					</li>
 				</ul>
 			</nav>
-			<header>
-				<h1>Gathering Garden</h1>
-			</header>
+			<h1>Gathering Garden</h1>
+		</header>
+		<main>
 			<div id="page-wrapper">
 				<div id="window__wrapper">
 					<div id="window__text">
