wip add randomly generated flowers
instead of relative position, need to be absolute but within bounds of the bed div

--- a/flower-bed.html
+++ b/flower-bed.html
@@ -70,6 +70,7 @@
       <h1>flower bed</h1>
       <div id="bed"></div>
     </main>
+    <script src="flower-data.js"></script>
     <script src="flower-parse.js"></script>
   </body>
 </html>
