add style to iframe pieces

--- a/contributions/wildflowers.html
+++ b/contributions/wildflowers.html
@@ -1,19 +1,32 @@
-<h1>Wildflowers</h1>
-<h2>KG Munro</h2>
-<p> 
-Creativity is the seed of life</br>
-We are the hands that sow</br> 
-Through our stories and words</br>
-From various parts of our blue planet</br>
-I wish for fellow poets and creators</br>
-To plant more seeds of honesty</br>
-Because telling the truth is timeless </br>
-In order for us to grow,</br>
-We must exist as if we are wildflowers </br>
-Growing in the same soil </br>
-Using our imagination to turn our differences </br>
-into a rainbow </br>
-Through talking, writing, petitions, performance, and more</br>
-The hope that I harbor for participatory art is this:</br>
-That we can heal society and continue the creative legacy.</br>
-</p>
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" text="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" text="ie=edge">
+        <title>Gathering Garden</title>
+    </head>
+    <style>
+        body {
+            background-color: whitesmoke;
+            font-family: "Courier New", Courier, monospace;
+        }
+    </style>
+    <main>
+        <h1>Wildflowers</h1>
+        <h2>KG Munro</h2>
+        <p> Creativity is the seed of life</br>
+        We are the hands that sow</br> 
+        Through our stories and words</br>
+        From various parts of our blue planet</br>
+        I wish for fellow poets and creators</br>
+        To plant more seeds of honesty</br>
+        Because telling the truth is timeless </br>
+        In order for us to grow,</br>
+        We must exist as if we are wildflowers </br>
+        Growing in the same soil </br>
+        Using our imagination to turn our differences </br>
+        into a rainbow </br>
+        Through talking, writing, petitions, performance, and more</br>
+        The hope that I harbor for participatory art is this:</br>
+        That we can heal society and continue the creative legacy.</br></p></main></html>
