--- a/contributions/poem.html
+++ b/contributions/poem.html
@@ -1,5 +1,11 @@
+<style>
+    body {
+        background-color: whitesmoke;
+        font-family: "Courier New", Courier, monospace;
+    }
+</style>
 <div>
-<p>
+    <p>
 For participatory arts to flourish and grow</br>
 
 It must become like a dandelion</br>
@@ -29,5 +35,4 @@ Inside demolished factories where nobody shows</br>
 and fences and locked gates are all that is known
 
 and in all other places, people no longer go
-</p> 
-</div>
+</p> </div>
