--- a/contributions/manifesto.html
+++ b/contributions/manifesto.html
@@ -1,5 +1,4 @@
-<h1>A Manifesto for Gathering Garden</h1> 
-<h2>Lucy Jefferies</h2> 
+<h2>A Manifesto for Gathering Garden</h2>
 <p>
 The ground must be levelled before anything can grow</br>
 Plant seeds conscientiously, think about what is possible with the conditions you have</br> 
@@ -9,5 +8,5 @@ Be patient, go slow, take your time – replant, reshape and try again </br>
 Show radical tolerance - somethings will always grow wild </br>
 Question your green fingers – whose prints are being left on the land? </br>
 Take time to be proud and loud about the fruits of your labour and the nurturing value of the work you do </br>
-Leave space for your own struggles, watering and growth</br>
-</p> 
+Leave space for your own struggles, watering and growth</br></p>
+<i>Lucy Jefferies</i>
