add radical care page

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 						</a>
 					</li>
 					<li class="node__wrapper">
-						<a class="sphere__link" href="?text=wildflowers.html">
+						<a class="sphere__link" href="./radical-care.html">
 							<div id="sphere-6" class="sphere__wrapper" >
 								<div id="sphere-6" class="sphere__gradient"></div>
 							</div>
