--- a/flower-bed.html
+++ b/flower-bed.html
@@ -49,7 +49,7 @@
             </a>
           </li>
           <li class="node__wrapper">
-            <a class="sphere__link" href="./index.html?text=wildflowers.html">
+            <a class="sphere__link" href="./radical-care.html">
               <div id="sphere-6" class="sphere__wrapper" >
                 <div id="sphere-6" class="sphere__gradient"></div>
               </div>
