--- a/flower-bed.html
+++ b/flower-bed.html
@@ -70,6 +70,9 @@
       <h1>flower bed</h1>
       <div id="bed"></div>
     </main>
+    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
+    <script src="firebase.js"></script>
     <script src="flower-data.js"></script>
     <script src="flower-parse.js"></script>
   </body>
