--- a/flower-bed.html
+++ b/flower-bed.html
@@ -73,6 +73,7 @@
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
     <script src="firebase.js"></script>
+    <script src="flower-data.js"></script>
     <script src="flower-populate.js"></script>
   </body>
 </html>
