--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             <div class="sphere__wrapper">
               <div class="sphere__gradient"></div>
             </div>
+            <div class="node__title"><p>roots</p></div>
           </a>
         </li>
         <li class="node__wrapper">
@@ -26,6 +27,7 @@
             <div id="sphere-2" class="sphere__wrapper">
               <div class="sphere__gradient"></div>
             </div>
+            <div class="node__title"><p>radical care</p></div>
           </a>
         </li>
         <li class="node__wrapper">
@@ -33,6 +35,7 @@
             <div id="sphere-3" class="sphere__wrapper">
               <div id="sphere-3" class="sphere__gradient"></div>
             </div>
+            <div class="node__title"><p>flower bed</p></div>
           </a>
         </li>
         <li class="node__wrapper">
@@ -40,6 +43,7 @@
             <div id="sphere-4" class="sphere__wrapper">
               <div id="sphere-4" class="sphere__gradient"></div>
             </div>
+            <div class="node__title"><p>roots</p></div>
           </a>
         </li>
         <li class="node__wrapper">
@@ -47,6 +51,7 @@
             <div id="sphere-5" class="sphere__wrapper">
               <div id="sphere-5" class="sphere__gradient"></div>
             </div>
+            <div class="node__title"><p>roots</p></div>
           </a>
         </li>
         <li class="node__wrapper">
@@ -54,6 +59,7 @@
             <div id="sphere-6" class="sphere__wrapper">
               <div id="sphere-6" class="sphere__gradient"></div>
             </div>
+            <div class="node__title"><p>radical care</p></div>
           </a>
         </li>
         <li class="node__wrapper">
@@ -61,6 +67,7 @@
             <div id="sphere-7" class="sphere__wrapper">
               <div id="sphere-7" class="sphere__gradient"></div>
             </div>
+            <div class="node__title"><p>flower bed</p></div>
           </a>
         </li>
       </ul>
