add more header and nav functionality

--- a/flower-bed.html
+++ b/flower-bed.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>gathering garden - flower bed</title>
-    <link rel="stylesheet" href="./style.css">
-    <link rel="stylesheet" href="./flowers.css">
+    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./flowers.css" />
   </head>
   <body>
     <header>
-      <h1>Gathering Garden</h1>
+      <h1><a href="./index.html">Gathering Garden</a></h1>
     </header>
     <main>
       <h2>flower bed</h2>
@@ -24,10 +24,10 @@
           </div>
           <div class="form__input">
             <label for="email">Enter your name: </label>
-            <input type="author" name="author" id="author" required>
+            <input type="author" name="author" id="author" required />
           </div>
           <div>
-            <input type="submit" value="Plant your flower">
+            <input type="submit" value="Plant your flower" />
           </div>
         </form>
       </div>
