--- a/roots.html
+++ b/roots.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <header>
-      <h1>Gathering Garden</h1>
+      <h1><a href="./index.html">Gathering Garden</a></h1>
     </header>
     <main>
       <div id="page-wrapper">
@@ -24,7 +24,7 @@
         </div>
         <div class="text__wrapper">
           <div class="text__heading">
-            <h2>MANIFESTO FOR FUTURE OF PARTICIPATORY ART</h2>
+            <h3>MANIFESTO FOR FUTURE OF PARTICIPATORY ART</h3>
             <img
               class="text__heading--background"
               alt="background image of blurry woods"
@@ -32,15 +32,15 @@
             />
           </div>
           <div class="text__content">
-            <h3>
+            <h4>
               <span aria-hidden="true">&deg;</span> SEEDS OF HOPE
               <span aria-hidden="true">&deg;</span>
-            </h3>
+            </h4>
             <p>BRANCHES OF LISTENING, OF CARING, OF ACCEPTANCE</p>
-            <h3>
+            <h4>
               <span aria-hidden="true">&raquo;</span> OUR DEMANDS
               <span aria-hidden="true">&raquo;</span>
-            </h3>
+            </h4>
             <p>
               TIME TO MEMORIALISE, TO CELEBRATE, TO LOOK BACKWARDS AND FORWARDS
             </p>
