--- a/flower-bed.html
+++ b/flower-bed.html
@@ -7,6 +7,7 @@
     <title>gathering garden - flower bed</title>
     <link rel="stylesheet" href="./style.css" />
     <link rel="stylesheet" href="./flowers.css" />
+    <link rel="stylesheet" href="./nav.css" />
   </head>
   <body>
     <header>
@@ -31,6 +32,64 @@
           </div>
         </form>
       </div>
+      <ul class="nodes">
+        <li class="node__wrapper">
+          <a class="sphere__link" href="./roots.html">
+            <div class="sphere__wrapper">
+              <div class="sphere__gradient"></div>
+            </div>
+            <div class="node__title"><p>roots</p></div>
+          </a>
+        </li>
+        <li class="node__wrapper">
+          <a class="sphere__link" href="./radical-care.html">
+            <div id="sphere-2" class="sphere__wrapper">
+              <div class="sphere__gradient"></div>
+            </div>
+            <div class="node__title"><p>radical care</p></div>
+          </a>
+        </li>
+        <li class="node__wrapper">
+          <a class="sphere__link" href="./flower-bed.html">
+            <div id="sphere-3" class="sphere__wrapper">
+              <div id="sphere-3" class="sphere__gradient"></div>
+            </div>
+            <div class="node__title"><p>flower bed</p></div>
+          </a>
+        </li>
+        <li class="node__wrapper">
+          <a class="sphere__link" href="./roots.html">
+            <div id="sphere-4" class="sphere__wrapper">
+              <div id="sphere-4" class="sphere__gradient"></div>
+            </div>
+            <div class="node__title"><p>roots</p></div>
+          </a>
+        </li>
+        <li class="node__wrapper">
+          <a class="sphere__link" href="./roots.html">
+            <div id="sphere-5" class="sphere__wrapper">
+              <div id="sphere-5" class="sphere__gradient"></div>
+            </div>
+            <div class="node__title"><p>roots</p></div>
+          </a>
+        </li>
+        <li class="node__wrapper">
+          <a class="sphere__link" href="./radical-care.html">
+            <div id="sphere-6" class="sphere__wrapper">
+              <div id="sphere-6" class="sphere__gradient"></div>
+            </div>
+            <div class="node__title"><p>radical care</p></div>
+          </a>
+        </li>
+        <li class="node__wrapper">
+          <a class="sphere__link" href="./flower-bed.html">
+            <div id="sphere-7" class="sphere__wrapper">
+              <div id="sphere-7" class="sphere__gradient"></div>
+            </div>
+            <div class="node__title"><p>flower bed</p></div>
+          </a>
+        </li>
+      </ul>
     </main>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
