--- a/radical-care.html
+++ b/radical-care.html
@@ -80,58 +80,65 @@
       <ul class="nodes">
         <li class="node__wrapper">
           <a class="sphere__link" href="./roots.html">
+            <div class="node__title"><p>roots</p></div>
             <div class="sphere__wrapper">
               <div class="sphere__gradient"></div>
             </div>
-            <div class="node__title"><p>roots</p></div>
+            <div class="node__wave"></div>
           </a>
         </li>
         <li class="node__wrapper">
           <a class="sphere__link" href="./radical-care.html">
+            <div class="node__title"><p>radical care</p></div>
             <div id="sphere-2" class="sphere__wrapper">
               <div class="sphere__gradient"></div>
             </div>
-            <div class="node__title"><p>radical care</p></div>
+            <div class="node__wave"></div>
           </a>
         </li>
         <li class="node__wrapper">
           <a class="sphere__link" href="./flower-bed.html">
+            <div class="node__title"><p>flower bed</p></div>
             <div id="sphere-3" class="sphere__wrapper">
               <div id="sphere-3" class="sphere__gradient"></div>
             </div>
-            <div class="node__title"><p>flower bed</p></div>
+            <div class="node__wave"></div>
           </a>
         </li>
         <li class="node__wrapper">
           <a class="sphere__link" href="./roots.html">
+            <div class="node__title"><p>roots</p></div>
             <div id="sphere-4" class="sphere__wrapper">
               <div id="sphere-4" class="sphere__gradient"></div>
             </div>
-            <div class="node__title"><p>roots</p></div>
+            <div class="node__wave"></div>
           </a>
         </li>
         <li class="node__wrapper">
           <a class="sphere__link" href="./roots.html">
+            <div class="node__title"><p>roots</p></div>
             <div id="sphere-5" class="sphere__wrapper">
               <div id="sphere-5" class="sphere__gradient"></div>
             </div>
-            <div class="node__title"><p>roots</p></div>
+            <div class="node__wave"></div>
           </a>
         </li>
         <li class="node__wrapper">
           <a class="sphere__link" href="./radical-care.html">
+            <div class="node__title"><p>radical care</p></div>
             <div id="sphere-6" class="sphere__wrapper">
               <div id="sphere-6" class="sphere__gradient"></div>
             </div>
-            <div class="node__title"><p>radical care</p></div>
+            <div class="node__wave"></div>
           </a>
         </li>
         <li class="node__wrapper">
           <a class="sphere__link" href="./flower-bed.html">
+            <div class="node__title"><p>flower bed</p></div>
             <div id="sphere-7" class="sphere__wrapper">
               <div id="sphere-7" class="sphere__gradient"></div>
             </div>
-            <div class="node__title"><p>flower bed</p></div>
+            <div class="node__wave"></div>
           </a>
         </li>
       </ul>
