--- a/pollinate.html
+++ b/pollinate.html
@@ -79,8 +79,8 @@
       </div>
       <ul class="nodes">
         <li class="node__wrapper">
-          <a class="sphere__link" href="./roots.html">
-            <div class="node__title"><p>roots</p></div>
+          <a class="sphere__link" href="./root.html">
+            <div class="node__title"><p>[root]</p></div>
             <div class="sphere__wrapper">
               <div class="sphere__gradient"></div>
             </div>
@@ -88,8 +88,8 @@
           </a>
         </li>
         <li class="node__wrapper">
-          <a class="sphere__link" href="./radical-care.html">
-            <div class="node__title"><p>radical care</p></div>
+          <a class="sphere__link" href="./flower-bed.html">
+            <div class="node__title"><p>[seed]</p></div>
             <div id="sphere-2" class="sphere__wrapper">
               <div class="sphere__gradient"></div>
             </div>
@@ -97,8 +97,8 @@
           </a>
         </li>
         <li class="node__wrapper">
-          <a class="sphere__link" href="./flower-bed.html">
-            <div class="node__title"><p>flower bed</p></div>
+          <a class="sphere__link" href="./pollinate.html">
+            <div class="node__title"><p>[pollinate]</p></div>
             <div id="sphere-3" class="sphere__wrapper">
               <div id="sphere-3" class="sphere__gradient"></div>
             </div>
@@ -106,8 +106,8 @@
           </a>
         </li>
         <li class="node__wrapper">
-          <a class="sphere__link" href="./roots.html">
-            <div class="node__title"><p>roots</p></div>
+          <a class="sphere__link" href="./grow.html">
+            <div class="node__title"><p>[grow]</p></div>
             <div id="sphere-4" class="sphere__wrapper">
               <div id="sphere-4" class="sphere__gradient"></div>
             </div>
@@ -115,28 +115,10 @@
           </a>
         </li>
         <li class="node__wrapper">
-          <a class="sphere__link" href="./roots.html">
-            <div class="node__title"><p>roots</p></div>
+          <a class="sphere__link" href="./about.html">
+            <div class="node__title"><p>[about]</p></div>
             <div id="sphere-5" class="sphere__wrapper">
               <div id="sphere-5" class="sphere__gradient"></div>
-            </div>
-            <div class="node__wave"></div>
-          </a>
-        </li>
-        <li class="node__wrapper">
-          <a class="sphere__link" href="./radical-care.html">
-            <div class="node__title"><p>radical care</p></div>
-            <div id="sphere-6" class="sphere__wrapper">
-              <div id="sphere-6" class="sphere__gradient"></div>
-            </div>
-            <div class="node__wave"></div>
-          </a>
-        </li>
-        <li class="node__wrapper">
-          <a class="sphere__link" href="./flower-bed.html">
-            <div class="node__title"><p>flower bed</p></div>
-            <div id="sphere-7" class="sphere__wrapper">
-              <div id="sphere-7" class="sphere__gradient"></div>
             </div>
             <div class="node__wave"></div>
           </a>
