add new page titles

--- a/pollinate.html
+++ b/pollinate.html
@@ -14,7 +14,7 @@
     </header>
     <main>
       <div class="content__wrapper">
-        <h2>RADICAL CARE</h2>
+        <h2>POLLINATE</h2>
         <div class="content__row">
           <div class="content__column">
             <div class="audio__wrapper">
