--- a/root.html
+++ b/root.html
@@ -13,7 +13,8 @@
       <h1><a href="./index.html">Gathering Garden</a></h1>
     </header>
     <main>
-      <div id="page-wrapper">
+      <div class="content__wrapper" id="page-wrapper">
+        <h2>ROOT</h2>
         <div id="window__wrapper">
           <div id="window__text">
             <iframe
