add temp about page

--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>gathering garden - pollinate</title>
+    <title>gathering garden - about</title>
     <link rel="stylesheet" href="./style.css" />
     <link rel="stylesheet" href="./nav.css" />
   </head>
@@ -14,37 +14,12 @@
     </header>
     <main>
       <div class="content__wrapper">
-        <h2>POLLINATE</h2>
+        <h2>ABOUT</h2>
         <div class="content__row">
-          <div class="content__column">
-            <div class="audio__wrapper">
-              <audio controls>
-                <source
-                  src="./contributions/gathering_garden_lucy_wheeler.mp3"
-                  type="audio/mpeg"
-                />
-                Your browser does not support the audio element.
-              </audio>
-            </div>
-            <div class="image__wrapper">
-              <img
-                alt="a poster for the Apollo Project with the text be sound, be creative, be yourself and photos of young people collaborating in an office and a gallery"
-                src="./contributions/apollo_project_dither.png"
-              />
-            </div>
-          </div>
           <div class="text__wrapper">
-            <div class="text__heading">
-              <h3>MANIFESTO FOR FUTURE OF PARTICIPATORY ART</h3>
-              <img
-                class="text__heading--background"
-                alt="background image of blurry woods"
-                src="./contributions/gabriela_saenger_silva/summer_dithered.png"
-              />
-            </div>
             <div class="text__content">
-              <h4>A Manifesto for Gathering Garden</h4>
-              <p>The ground must be levelled before anything can grow</p>
+              <h4>About the making of this site</h4>
+              <p>This will be some information about how this site was built</p>
               <p>
                 Plant seeds conscientiously, think about what is possible with
                 the conditions you have
