--- a/flower-bed.html
+++ b/flower-bed.html
@@ -14,7 +14,7 @@
       <h1><a href="./index.html">Gathering Garden</a></h1>
     </header>
     <main>
-      <h2>flower bed</h2>
+      <h2>SEED</h2>
       <div id="bed"></div>
       <div class="form__wrapper">
         <div id="log" class="form__log"></div>
