--- a/root.html
+++ b/root.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" text="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" text="ie=edge" />
-    <title>Gathering Garden</title>
+    <title>Gathering Garden - root</title>
     <link rel="stylesheet" href="./style.css" />
     <link rel="stylesheet" href="./nav.css" />
   </head>
