re-design overall content style

--- a/root.html
+++ b/root.html
@@ -1,69 +1,89 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" text="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" text="ie=edge" />
+    <meta charset="UTF-8"/>
+    <meta name="viewport" text="width=device-width, initial-scale=1.0"/>
+    <meta http-equiv="X-UA-Compatible" text="ie=edge"/>
     <title>Gathering Garden - root</title>
-    <link rel="stylesheet" href="./style.css" />
-    <link rel="stylesheet" href="./nav.css" />
+    <link rel="stylesheet" href="./style.css"/>
+    <link rel="stylesheet" href="./nav.css"/>
   </head>
   <body>
     <header>
-      <h1><a href="./index.html">Gathering Garden</a></h1>
+      <h1>
+        <a href="./index.html">Gathering Garden</a>
+      </h1>
     </header>
     <main>
-      <div class="content__wrapper" id="page-wrapper">
-        <h2>ROOT</h2>
-        <div id="window__wrapper">
-          <div id="window__text">
-            <iframe
-              id="frame__text"
-              title="poem"
-              src="./contributions/poem.html"
-            ></iframe>
+      <div class="content__wrapper">
+        <div class="content__row">
+          <div class="content__column">
+            <div class="content__title--full">
+              <h2>ROOT</h2>
+            </div>
           </div>
-        </div>
-        <div class="text__wrapper">
-          <div class="text__heading">
-            <h3>MANIFESTO FOR FUTURE OF PARTICIPATORY ART</h3>
-            <img
+          <div class="content__column">
+            <div class="text__wrapper">
+              <div class="text__heading">
+                <h3>MANIFESTO FOR FUTURE OF PARTICIPATORY ART</h3>
+                <img
               class="text__heading--background"
               alt="background image of blurry woods"
-              src="./contributions/dither_it_djuna_mount.png"
-            />
-          </div>
-          <div class="text__content">
-            <h4>
-              <span aria-hidden="true">&deg;</span> SEEDS OF HOPE
+              src="./contributions/dither_it_djuna_mount.png"/>
+              </div>
+              <div class="text__content">
+                <h4>
+                  <span aria-hidden="true">&deg;</span> SEEDS OF HOPE
               <span aria-hidden="true">&deg;</span>
-            </h4>
-            <p>BRANCHES OF LISTENING, OF CARING, OF ACCEPTANCE</p>
-            <h4>
-              <span aria-hidden="true">&raquo;</span> OUR DEMANDS
+                </h4>
+                <p>BRANCHES OF LISTENING, OF CARING, OF ACCEPTANCE</p>
+                <h4>
+                  <span aria-hidden="true">&raquo;</span> OUR DEMANDS
               <span aria-hidden="true">&raquo;</span>
-            </h4>
-            <p>
+                </h4>
+                <p>
               TIME TO MEMORIALISE, TO CELEBRATE, TO LOOK BACKWARDS AND FORWARDS
             </p>
-            <p>ACCEPT THE LIMITS OF WHAT YOU, AND YOUR ORGANISATION CAN DO</p>
-            <p>RECOGNISE PERSONALISE AND PROFESSIONAL LIMITS</p>
-            <p>
+                <p>ACCEPT THE LIMITS OF WHAT YOU, AND YOUR ORGANISATION CAN DO</p>
+                <p>RECOGNISE PERSONALISE AND PROFESSIONAL LIMITS</p>
+                <p>
               NOT ACCEPTING THE ‘NORMALISING’ STANDARDS SOCIETY SOMETIMES SET
               FOR US
             </p>
-            <p>ALLOWING PEOPLE TO BE THEMSELVES</p>
-            <p>THE ABILITY TO ASK WHY</p>
-            <p>
+                <p>ALLOWING PEOPLE TO BE THEMSELVES</p>
+                <p>THE ABILITY TO ASK WHY</p>
+                <p>
               AND TO UNDO THE CENTURIES OF CONDITIONING – AND NOT INFLICT THESE
               CONDITIONS THAT WE HAD OURSELVES
             </p>
-            <p>PATIENCE. SPACE TO REFLECT</p>
-            <p>RELATIONSHIP BUILDING</p>
-            <p>DIFFERENT TACTICS OF CARE</p>
-            <p>TIME TO SIT AND ASSESS OUR OWN NEEDS</p>
-            <div class="text__content--signature">
-              <i>Ardis, Julie, Liz and Lucy</i>
+                <p>PATIENCE. SPACE TO REFLECT</p>
+                <p>RELATIONSHIP BUILDING</p>
+                <p>DIFFERENT TACTICS OF CARE</p>
+                <p>TIME TO SIT AND ASSESS OUR OWN NEEDS</p>
+                <div class="text__content--signature">
+                  <i>Ardis, Julie, Liz and Lucy</i>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="content__row">
+          <div class="content__column">
+            <div class="audio__wrapper">
+              <audio controls>
+                <source
+                  src="./contributions/voice_note.mp3"
+                  type="audio/mpeg"/>
+                Your browser does not support the audio element.
+              </audio>
+            </div>
+          </div>
+          <div class="content__column">
+              <div class="image__wrapper">
+              <img
+                alt="a small stone with blue flowers drawn on it"
+                src="./contributions/lottie_rimmer.jpg"
+              />
             </div>
           </div>
         </div>
@@ -71,7 +91,9 @@
       <ul class="nodes">
         <li class="node__wrapper">
           <a class="sphere__link" href="./root.html">
-            <div class="node__title"><p>[root]</p></div>
+            <div class="node__title">
+              <p>[root]</p>
+            </div>
             <div class="sphere__wrapper">
               <div class="sphere__gradient"></div>
             </div>
@@ -80,7 +102,9 @@
         </li>
         <li class="node__wrapper">
           <a class="sphere__link" href="./flower-bed.html">
-            <div class="node__title"><p>[seed]</p></div>
+            <div class="node__title">
+              <p>[seed]</p>
+            </div>
             <div id="sphere-2" class="sphere__wrapper">
               <div class="sphere__gradient"></div>
             </div>
@@ -89,7 +113,9 @@
         </li>
         <li class="node__wrapper">
           <a class="sphere__link" href="./pollinate.html">
-            <div class="node__title"><p>[pollinate]</p></div>
+            <div class="node__title">
+              <p>[pollinate]</p>
+            </div>
             <div id="sphere-3" class="sphere__wrapper">
               <div id="sphere-3" class="sphere__gradient"></div>
             </div>
@@ -98,7 +124,9 @@
         </li>
         <li class="node__wrapper">
           <a class="sphere__link" href="./grow.html">
-            <div class="node__title"><p>[grow]</p></div>
+            <div class="node__title">
+              <p>[grow]</p>
+            </div>
             <div id="sphere-4" class="sphere__wrapper">
               <div id="sphere-4" class="sphere__gradient"></div>
             </div>
@@ -107,7 +135,9 @@
         </li>
         <li class="node__wrapper">
           <a class="sphere__link" href="./about.html">
-            <div class="node__title"><p>[about]</p></div>
+            <div class="node__title">
+              <p>[about]</p>
+            </div>
             <div id="sphere-5" class="sphere__wrapper">
               <div id="sphere-5" class="sphere__gradient"></div>
             </div>
