adjust styles for root page

--- a/root.html
+++ b/root.html
@@ -70,21 +70,30 @@
         <div class="content__row">
           <div class="content__column">
             <div class="audio__wrapper">
-              <audio controls>
-                <source
+              <div class="audio__controls">
+                <audio controls>
+                  <source
                   src="./contributions/voice_note.mp3"
                   type="audio/mpeg"/>
-                Your browser does not support the audio element.
-              </audio>
+                Your browser does not support the audio element.<a href="contributions/voice_note.mp3">download here</a>
+                </audio>
+              </div>
+              <div class="audio__caption">
+                <p>" As gardeners of participatory art I believe we need to work with heightened awareness of the places, people, contexts and environments that we find ourselves in. We need to understand how we are all interconnected to each other and we all form part of an ecology where we are all inter-dependent and as equally responsible for what happens in that garden. "</p>
+              </div>
             </div>
           </div>
+        </div>
+        <div class="content__row">
           <div class="content__column">
-              <div class="image__wrapper">
+            <figure class="image__wrapper">
               <img
                 alt="a small stone with blue flowers drawn on it"
-                src="./contributions/lottie_rimmer.jpg"
-              />
-            </div>
+                src="./contributions/lottie_rimmer.webp"/>
+              <figcaption class="image__credit">
+                <p>lottie rimmer</p>
+              </figcaption>
+            </figure>
           </div>
         </div>
       </div>
